--- a/stack-aliases.conf
+++ b/stack-aliases.conf
@@ -6,6 +6,7 @@ local=community_eventsresonite
 
 # Application configuration file paths
 prod_app_config=/home/root_man/.config/prod.community_events.resonite.toml
-dev_app_config=/home/root_man/.config/dev.community_events.resonite.toml # dev and preprod are the same
-preprod_app_config=/home/root_man/.config/dev.community_events.resonite.toml # dev and preprod are the same
 local_app_config=./config.toml
+# dev and preprod are the same
+dev_app_config=/home/root_man/.config/dev.community_events.resonite.toml
+preprod_app_config=/home/root_man/.config/dev.community_events.resonite.toml
