--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -58,9 +58,9 @@ services:
       - SECRET_FILE=/run/secrets/secret
       - SECRET_KEY_FILE=/run/secrets/secret_key
       - SENTRY_DSN_FILE=/run/secrets/sentry_dsn
-      - CACHE_URL=${{ env.CACHE_URL }}
-      - DISCORD_CLIENT_ID=${{ env.DISCORD_CLIENT_ID }}
-      - DISCORD_REDIRECT_URL=${{ env.DISCORD_REDIRECT_URL }}
+      - CACHE_URL=${CACHE_URL}
+      - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
+      - DISCORD_REDIRECT_URL=${DISCORD_REDIRECT_URL}
     depends_on:
       database:
         condition: service_healthy
@@ -85,9 +85,9 @@ services:
       - SECRET_FILE=/run/secrets/secret
       - SECRET_KEY_FILE=/run/secrets/secret_key
       - SENTRY_DSN_FILE=/run/secrets/sentry_dsn
-      - CACHE_URL=${{ env.CACHE_URL }}
-      - DISCORD_CLIENT_ID=${{ env.DISCORD_CLIENT_ID }}
-      - DISCORD_REDIRECT_URL=${{ env.DISCORD_REDIRECT_URL }}
+      - CACHE_URL=${CACHE_URL}
+      - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
+      - DISCORD_REDIRECT_URL=${DISCORD_REDIRECT_URL}
 
   api_client:
     build: .
@@ -108,9 +108,9 @@ services:
       - SECRET_FILE=/run/secrets/secret
       - SECRET_KEY_FILE=/run/secrets/secret_key
       - SENTRY_DSN_FILE=/run/secrets/sentry_dsn
-      - CACHE_URL=${{ env.CACHE_URL }}
-      - DISCORD_CLIENT_ID=${{ env.DISCORD_CLIENT_ID }}
-      - DISCORD_REDIRECT_URL=${{ env.DISCORD_REDIRECT_URL }}
+      - CACHE_URL=${CACHE_URL}
+      - DISCORD_CLIENT_ID=${DISCORD_CLIENT_ID}
+      - DISCORD_REDIRECT_URL=${DISCORD_REDIRECT_URL}
     labels:
       - traefik.enable=true
 
