--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -22,9 +22,9 @@ jobs:
           SECRET: ${{ secrets.SECRET }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          CACHE_URL: ${{ env.CACHE_URL }}
-          DISCORD_CLIENT_ID: ${{ env.DISCORD_CLIENT_ID }}
-          DISCORD_REDIRECT_URL: ${{ env.DISCORD_REDIRECT_URL }}
+          CACHE_URL: ${{ vars.CACHE_URL }}
+          DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
+          DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
         run: docker compose -f dev.docker-compose.yml -p dev_community_eventsresonite --profile "*" build
 
       - name: Update 3rd party docker images
@@ -37,9 +37,9 @@ jobs:
           SECRET: ${{ secrets.SECRET }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          CACHE_URL: ${{ env.CACHE_URL }}
-          DISCORD_CLIENT_ID: ${{ env.DISCORD_CLIENT_ID }}
-          DISCORD_REDIRECT_URL: ${{ env.DISCORD_REDIRECT_URL }}
+          CACHE_URL: ${{ vars.CACHE_URL }}
+          DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
+          DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
         run: docker compose -f dev.docker-compose.yml -p dev_community_eventsresonite --profile "*" pull
 
       - name: Spin up containers
@@ -52,7 +52,7 @@ jobs:
           SECRET: ${{ secrets.SECRET }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          CACHE_URL: ${{ env.CACHE_URL }}
-          DISCORD_CLIENT_ID: ${{ env.DISCORD_CLIENT_ID }}
-          DISCORD_REDIRECT_URL: ${{ env.DISCORD_REDIRECT_URL }}
+          CACHE_URL: ${{ vars.CACHE_URL }}
+          DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
+          DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
         run: docker compose -f dev.docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d
