--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
 
   migrations:
     build: .
+    env_file:
+      - .env
     command: >
       /bin/bash -c "
       poetry run alembic upgrade head;
@@ -46,7 +48,7 @@ services:
       fi
       "
     volumes:
-      - "./config.toml:/app/config.toml"
+      #- "./config.toml:/app/config.toml"
       - "./resonite_communities:/app/resonite_communities"
       - "./migrations:/app/migrations"
     depends_on:
@@ -58,6 +60,8 @@ services:
 
   signals_manager:
     build: .
+    env_file:
+      - .env
     restart: always
     command: poetry run signals_manager --reload
     profiles:
@@ -68,11 +72,13 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "./config.toml:/app/config.toml"
+      #- "./config.toml:/app/config.toml"
       - "./resonite_communities:/app/resonite_communities"
 
   api_client:
     build: .
+    env_file:
+      - .env
     restart: always
     profiles:
       - client
@@ -83,7 +89,7 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "./config.toml:/app/config.toml"
+      #- "./config.toml:/app/config.toml"
       - "./resonite_communities:/app/resonite_communities"
     ports:
       - '8010:8000'
@@ -116,6 +122,8 @@ services:
 
   web_client:
     build: .
+    env_file:
+      - .env
     restart: always
     profiles:
       - client
@@ -126,14 +134,19 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "./config.toml:/app/config.toml"
+      #- "./config.toml:/app/config.toml"
       - "./resonite_communities:/app/resonite_communities"
     ports:
       - '8001:8001'
     labels:
       - traefik.enable=true
+
       - traefik.http.routers.web_client.rule=Host(`resonite-communities.local`)
       - traefik.http.routers.web_client.entrypoints=web
+
+      # Public events legacy API route
+      - traefik.http.routers.dev_web_client_legacy_public.rule=Host(`3rd.resonite-communities.local`)
+      - traefik.http.routers.dev_web_client_legacy_public.entrypoints=web
 
   mkdocs:
     build:
