--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -25,6 +25,8 @@ jobs:
           CACHE_URL: ${{ vars.CACHE_URL }}
           DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
+          PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
         run: docker compose -f dev.docker-compose.yml -p dev_community_eventsresonite --profile "*" build
 
       - name: Update 3rd party docker images
@@ -40,6 +42,8 @@ jobs:
           CACHE_URL: ${{ vars.CACHE_URL }}
           DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
+          PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
         run: docker compose -f dev.docker-compose.yml -p dev_community_eventsresonite --profile "*" pull
 
       - name: Spin up containers
@@ -55,4 +59,6 @@ jobs:
           CACHE_URL: ${{ vars.CACHE_URL }}
           DISCORD_CLIENT_ID: ${{ vars.DISCORD_CLIENT_ID }}
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
+          PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
+          PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
         run: docker compose -f dev.docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d
