--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -28,7 +28,7 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
-        run: docker compose -f prod.docker-compose.yml -p prod_community_eventsresonite --profile "*" build
+        run: docker compose -f stacks/prod/docker-compose.yml -p prod_community_eventsresonite --profile "*" build
 
       - name: Update 3rd party docker images
         env:
@@ -45,7 +45,7 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
-        run: docker compose -f prod.docker-compose.yml -p prod_community_eventsresonite --profile "*" pull
+        run: docker compose -f stacks/prod/docker-compose.yml -p prod_community_eventsresonite --profile "*" pull
 
       - name: Spin up containers
         env:
@@ -62,4 +62,4 @@ jobs:
           DISCORD_REDIRECT_URL: ${{ vars.DISCORD_REDIRECT_URL }}
           PRIVATE_DOMAIN: ${{ vars.PRIVATE_DOMAIN }}
           PUBLIC_DOMAIN: ${{ vars.PUBLIC_DOMAIN }}
-        run: docker compose -f prod.docker-compose.yml -p prod_community_eventsresonite --profile "*" up -d
+        run: docker compose -f stacks/prod/docker-compose.yml -p prod_community_eventsresonite --profile "*" up -d
